--- a/login-page.html
+++ b/login-page.html
@@ -109,7 +109,7 @@
           <button 
             type="submit" 
             id="loginButton"
-            class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+            class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-gray-600 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500"
           >
             Sign in
           </button>
@@ -258,17 +258,17 @@
                     Revenue Service) ensures that:
                     <ul class="pl-6 pt-1.5 space-y-1.5">
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">All payments are tracked and validated in real-time.</span>
                       </li>
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">
                           Receipts are auto-generated and digitally attached to the customer's profile.
                         </span>
                       </li>
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">
                           Reconciliations with state treasury accounts are seamless and auditable.
                         </span>
@@ -292,21 +292,21 @@
                     Customer Portal with Digital Invoicing
                     <ul class="pl-6 pt-1.5 space-y-1.5">
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">Applicants and property owners can:</span>
                       </li>
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">View, download, and print invoices online.</span>
                       </li>
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">
                           Make payments through multiple channels—bank, POS, USSD, or mobile.
                         </span>
                       </li>
                       <li class="flex items-start">
-                        <div class="h-2 w-2 rounded-full mt-1.5 mr-2 flex-shrink-0"></div>
+                        <div class="h-2 w-2 rounded-full bg-gray-600 mt-1.5 mr-2 flex-shrink-0"></div>
                         <span class="text-gray-700">Monitor balances, payment history, and penalties.</span>
                       </li>
                     </ul>
