--- a/InstrumentRegistrationForm.html
+++ b/InstrumentRegistrationForm.html
@@ -352,7 +352,7 @@
                 <p class="text-gray-600 mb-6">Select an instrument type to register</p>
                 
                 <!-- Instrument Type Selection - All 12 Types -->
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-6">
+                <div class="grid grid-cols-1 gap-4 mb-6">
                     <button class="instrument-type-btn p-4 border rounded-lg hover:bg-gray-50 text-left" data-type="power-of-attorney">
                         <h3 class="font-medium">Power of Attorney</h3>
                         <p class="text-sm text-gray-600">General power of attorney document</p>
