--- a/ai-property-record-assistant.html
+++ b/ai-property-record-assistant.html
@@ -3,8 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AI Property Record Assistant - SLTR</title>
+<title>AI Property Record Assistant - SLTR </title>
 <!-- Tailwind CSS -->
+ <!-- Updated -->
 <script src="https://cdn.tailwindcss.com"></script>
 <!-- Lucide Icons -->
 <script src="https://unpkg.com/lucide@latest"></script>
